--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ header{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-image: url(./assets/images/Header_Background.png);
+    background-image: url(../assets/images/Header_Background.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
